# serializer version: 1
# name: test_parse_artists[spec-artistid3.artist]
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'item_id': '37ec820ca7193e17040c98f7da7c4b51',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-37ec820ca7193e17040c98f7da7c4b51_0',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': '2 Mello',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '37ec820ca7193e17040c98f7da7c4b51',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': '2 mello',
    'uri': 'opensubsonic://artist/37ec820ca7193e17040c98f7da7c4b51',
    'version': '',
  })
# ---
# name: test_parse_artists[spec-artistid3.artist].1
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'item_id': '37ec820ca7193e17040c98f7da7c4b51',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'Empty biography',
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-37ec820ca7193e17040c98f7da7c4b51_0',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
        dict({
          'path': 'http://localhost:8989/play/art/f20070e8e11611cc53542a38801d60fa/artist/2/thumb34.jpg',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': '2 Mello',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '37ec820ca7193e17040c98f7da7c4b51',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': '2 mello',
    'uri': 'opensubsonic://artist/37ec820ca7193e17040c98f7da7c4b51',
    'version': '',
  })
# ---
# name: test_parse_artists[spec-sample.artist]
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'item_id': '100000002',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-100000002',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Synthetic',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '100000002',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'synthetic',
    'uri': 'opensubsonic://artist/100000002',
    'version': '',
  })
# ---
# name: test_parse_artists[spec-sample.artist].1
  dict({
    'external_ids': list([
    ]),
    'favorite': True,
    'item_id': '100000002',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'Empty biography',
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'ar-100000002',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
        dict({
          'path': 'http://localhost:8989/play/art/f20070e8e11611cc53542a38801d60fa/artist/2/thumb34.jpg',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Synthetic',
    'position': None,
    'provider': 'opensubsonic',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '100000002',
        'provider_domain': 'opensubsonic',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'synthetic',
    'uri': 'opensubsonic://artist/100000002',
    'version': '',
  })
# ---
